--- a/web_interface/extended_pi3k_with_dash/assets/dash-style-mod.css
+++ b/web_interface/extended_pi3k_with_dash/assets/dash-style-mod.css
@@ -420,3 +420,12 @@ there.
 input, label {
     display:block;
 }
+
+.center-block {
+  margin: auto;
+  display: block;
+}
+
+form {
+  text-align: center;
+}
